--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "async": "^2.5.0",
     "bcoin": "bitpay/bcoin#v1.0.0-beta.14+cash",
     "bitcoind-rpc": "^0.6.0",
-    "bitcore-lib": "git://github.com/pshenmic/bitcore-lib.git",
+    "bitcore-lib": "5.0.0-beta.1",
     "bitcore-p2p": "git://github.com/pshenmic/bitcore-p2p.git",
     "bn.js": "^4.11.8",
     "body-parser": "^1.13.3",
